force-app/main/default/objects/Product2/fields/Illustration_Cover__c.field-meta.xml
<CustomField>
    <fullName>Illustration_Cover__c</fullName>
    <label>Illustration Cover</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>