force-app/main/default/objects/Product2/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <type>Date</type>
</CustomField>