force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Author__c</columns>
    <columns>PRODUCT2.DISPLAY_URL</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Genre__c</columns>
    <columns>ISBN__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>